--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
+    <string name="side_drawer_title_local">Local Media</string>
+    <string name="side_drawer_title_settings">Settings</string>
     <string name="menu_slideshow">Slideshow</string>
 </resources>
